--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/myDatabase
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=Xb!8p@43RzGvLd%92KwNp7YvZc$eMTq0
 EMAIL_USER=resetpassmail07@gmail.com
 EMAIL_PASS=ymjmenudojwhckqb
